welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur()) {
      gauche();
    	return false;
  } else {
  	avance();
    var couleur = getCouleurSol()
    if (couleur == Color.green) {
  		return true;
    }
  }
}